fix: header overflow on mobile

--- a/themes/hello-friend-ng/assets/scss/_logo.scss
+++ b/themes/hello-friend-ng/assets/scss/_logo.scss
@@ -13,7 +13,7 @@
 
   .logo-doge {
     @media #{$media-size-phone} {
-      width: 90%;
+      width: 80%;
     }
   }
 
@@ -29,7 +29,7 @@
       width: auto;
       height: auto;
       @media #{$media-size-phone} {
-        width: 90%;
+        width: 80%;
       }
     }
 
